# PEG-scaner

./: .dockerignore  .env.ci  .gitignore  .project-structure.md  .refactoring-checklist.txt  AGENTS.md  LICENSE  PHASE1_COMPLETION_SUMMARY.txt  QUICKSTART.md  README.md  RUN_PHASE1.sh  TODOWRITE.md  agent.md  agent_backup.md  config.yaml  docker-compose.dev.yml  docker-compose.yml  nx.json  package-lock.json  package.json  prompt.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
apps/: README.md
apps/backend/: Dockerfile  README.md  __init__.py  config.py  dependencies.py  main.py  manage.py  project.json  requirements.txt
apps/cms/: Dockerfile  README.md  manage.py  project.json  requirements.txt
apps/mobile/: Dockerfile  README.md  index.html  nginx.conf  package-lock.json  package.json  playwright.config.ts  project.json  tsconfig.app.json  vite.config.ts
apps/regression/: README.md  check_infra.js  graphql_e2e.py  neo4j.js  ping_pong.py  project.json  run_web_e2e.js
archive/: README.md
archive/multi_source_exploration/: fetch_akshare.py  fetch_alpha_vantage.py  fetch_dual_verification.py  fetch_final_three_sources.py  fetch_finnhub.py  fetch_fmp.py  fetch_investpy.py  fetch_multi_source.py  fetch_three_sources.py  fetch_twelvedata.py  fetch_yfinance_multiendpoint.py
archive/phrase1_tests/: README.md  run_final_fetch.sh  test_akshare_docs.py  test_akshare_full.py  test_finnhub_new.py  test_finnhub_raw.py  test_hk_stocks.py  test_normalize.py  test_twelvedata_price_only.py  test_twelvedata_raw.py  test_twelvedata_stats.py  verify_phrase1.sh  visualize_evaluation.py
backend/: README.md  db.sqlite3  project.json  requirements.txt  setup.py
backend/pegscanner_backend/: asgi.py  settings.py  urls.py  wsgi.py
backend/src/: main.py
backend/stock_research/: serializers.py  urls.py  views.py
backtest/: README.md  TODO.md  __init__.py
core/: README.md  __init__.py  data_io.py  data_persistence.py  format_utils.py  models.py
core/schemas/: README.md  __init__.py  stock_schema.py  validation_rules.py
data/: .structure-plan.md  README.md
data/cache/: 1211.HK_2025-11-15.json  1810.HK_2025-11-15.json  9618.HK_2025-11-15.json  9988.HK_2025-11-15.json  AAPL_2025-11-15.json  AMZN_2025-11-15.json  GOOGL_2025-11-15.json  META_2025-11-15.json  MSFT_2025-11-15.json  NVDA_2025-11-15.json  TEST_2025-11-15.json  TSLA_2025-11-15.json
data/results/: mag7_peg_2025-11-15.csv  mag7_peg_2025-11-15.md
data_collection/: README.md  TODO.md  __init__.py  cache_manager.py  data_aggregator.py  evaluate_data_sources.py  fetch_current_peg.py  fetch_current_peg_new.py  fetch_yfinance.py
docs/: AI_EVALUATION.md  COMPLIANCE_CHECK.md  COMPLIANCE_SUMMARY.md  ITERATION_SUMMARY.md  PEG_THEORY.md  PLAN.md  README.md  REFACTORING_SUMMARY.md  REQUIREMENTS.md  TODOWRITE.md  arch.md  index.md
docs/origin/: BRN-001.core_infra_ping.md  BRN-001.md  BRN-002.graphql_protocol_decision.md  BRN-002.md  BRN-003.single_stock_page.md  BRN-004.dev_test_prod_design.md  BRN-004.runlog_graphql_migration.md  BRN-005.schema.md  BRN-006.data_pipeline_infra.md  BRN-007.app_env_design.md  BRN-007.dev_test_prod_design.md  README.md
docs/project/: README.md  prompt_log.md
docs/specs/: README.md
docs/workflows/: README.md  app-logic-change.md  data-schema-change.md  docs-change.md  infra-automation-change.md
libs/: README.md  __init__.py
libs/auth/: __init__.py  token_utils.py
libs/config/: __init__.py  settings.py
libs/neo4j_db/: README.md  __init__.py  client.py
libs/neo4j_models/: __init__.py  base.py  company.py  earnings.py  (+4 more)
mobile/: README.md  package.json  project.json  tsconfig.app.json  tsconfig.json
project/: README.md  prompt_log.md
prompts/: README.md  append_promot.md
regression_tests/: README.md  ping_pong.py  project.json
schema/: README.md  stock.proto
scripts/: dev.sh
tests/: README.md  test_data_collection.py  test_data_quality.py  test_format_utils.py  test_validation_rules.py
tools/: README.md  clear_vite_cache.js  dev.sh  init_db.sh  install_system.py  lint_structure.sh  manage.py  test-ci.sh
x-data/: README.md  data_source_evaluation_20251116_153413.csv
x-log/: README.md
(+242 files in other folders)
